# enigma_machine

./: .gitignore  README.md  pyproject.toml
enigma/: encoder.py  serializers.py  urls.py  views.py
enigma/tests/: test_encoder.py
machine/: settings.py  urls.py
